I added an s to http to make it https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://curtistgo.github.io/film-prod",
+  "homepage": "https://curtistgo.github.io/film-prod",
   "name": "film-prod",
   "version": "0.1.0",
   "private": true,
